--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,4 +1,3 @@
-<p>recipes works!</p>
-
-<app-recipe-detail></app-recipe-detail>
-<app-recipe-list></app-recipe-list>
+<a routerLink="recipe-detail">Recipe Detail</a>
+<br>
+<a routerLink="recipe-list">Recipe List</a>
