--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color="primary">
     <span>My Application</span>
     <div class="spacer"></div>
-    <a mat-button routerLink="header">Home</a>
-    <a mat-button routerLink="header">About</a>
+    <a mat-button routerLink="home">Home</a>
+    <a mat-button routerLink="about">About</a>
+    <a mat-button routerLink="recipes">Recipes</a>
     <a mat-button routerLink="shopping-list">Shopping List</a>
     <a mat-button mat-raised-button color="accent" routerLink="">Sign Up</a>
 </mat-toolbar>
