--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,7 +1,9 @@
-<mat-card class="matCardSize" *ngFor="let recipe of recipes">
+<div class="matCardSize">
+    <mat-card [style.margin]="'30px'" *ngFor="let recipe of recipes">
     <div class="recipeImage">
-        <img mat-card-image src={{recipe.imagePath}}>
         <mat-card-content>{{recipe.name}}</mat-card-content>
         <mat-card-content>{{recipe.description}}</mat-card-content>
+        <img class="responsive" mat-card-image [style.width]="'400px'" [style.height]="'300px'" src={{recipe.imagePath}}>
     </div>
-</mat-card>
+    </mat-card>
+</div>
