move recipe's detail page

--- a/src/app/recipes/recipe-list/recipe-list.component.css
+++ b/src/app/recipes/recipe-list/recipe-list.component.css
@@ -1,19 +1,27 @@
-.matCardSize{
-    /* display: flex;
+.matCardContainer{
+    display: flex;
     align-items: center;
     flex-flow: row wrap;
-    justify-content: space-around; */
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
+.matCard{
+    width: 25%;
+}
 
 .responsive{
     width: 100%;
     height: auto;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 918px) {
+    .matCard{
+        width: 100%;
+    }
     .responsive{
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 }
