--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,9 +1,9 @@
-<div class="matCardSize">
-    <mat-card [style.margin]="'30px'" *ngFor="let recipe of recipes">
+<div class="matCardContainer">
+    <mat-card class="matCard" [style.margin]="'30px'" *ngFor="let recipe of recipes">
     <div class="recipeImage">
         <mat-card-content>{{recipe.name}}</mat-card-content>
         <mat-card-content>{{recipe.description}}</mat-card-content>
-        <img class="responsive" mat-card-image [style.width]="'400px'" [style.height]="'300px'" src={{recipe.imagePath}}>
+        <a [routerLink]="[recipe.id]"><img class="responsive" mat-card-image  [style.height]="'300px'" src={{recipe.imagePath}}></a> 
     </div>
     </mat-card>
 </div>
