--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,3 +1,1 @@
-<a routerLink="recipe-detail">Recipe Detail</a>
-<br>
-<a routerLink="recipe-list">Recipe List</a>
+<app-recipe-list></app-recipe-list>
