--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,50 @@
-<mat-toolbar color="primary">
-    <span>My Application</span>
-    <div class="spacer"></div>
-    <a mat-button routerLink="home">Home</a>
-    <a mat-button routerLink="about">About</a>
-    <a mat-button routerLink="recipes">Recipes</a>
-    <a mat-button routerLink="shopping-list">Shopping List</a>
-    <a mat-button mat-raised-button color="accent" routerLink="">Sign Up</a>
-</mat-toolbar>
-<!-- <nav mat-tab-nav-bar>
-    <a mat-tab-link
-       *ngFor="let routerLink of routeLinks; let i = index"
-       [routerLink]="routerLink.link"
-       [active]="activeLinkIndex === i"
-       (click)="activeLinkIndex = i"
-    >{{routerLink.label}}</a>
-</nav> -->
+<div>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Buk Kyung</span>
+        <span class="spacer"></span>
+        <div fxShow="true" fxHide.lt-md="true">
+          <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+          <a mat-button routerLink="home">Home</a>
+          <a mat-button routerLink="about">About</a>
+          <a mat-button routerLink="recipes">Recipes</a>
+          <a mat-button routerLink="shopping-list">Shopping List</a>
+          <a mat-button mat-raised-button color="accent" routerLink="">Sign Up</a>
+        </div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+  
+    <mat-sidenav-container fxFlexFill>
+      <mat-sidenav #sidenav>
+        <mat-nav-list>
+          <a routerLink="home" mat-list-item>
+            <mat-icon>home</mat-icon>
+            Home
+          </a>
+          <a routerLink="about" mat-list-item>
+            <mat-icon>pets</mat-icon>
+            About</a>
+          <a routerLink="recipes" mat-list-item>
+            <mat-icon>book</mat-icon>
+            Recipe
+          </a>
+          <a routerLink="shopping-list" mat-list-item>
+            <mat-icon>shopping_basket</mat-icon>
+            Shopping List
+          </a>
+          <a routerLink="" mat-list-item>
+            <mat-icon>lock</mat-icon>
+            Sign Up
+          </a>
+          <a (click)="sidenav.toggle()" mat-list-item>
+            <mat-icon>close</mat-icon> Close
+          </a>
+        </mat-nav-list>
+      </mat-sidenav>
+    </mat-sidenav-container>
+  </div>
 
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
